--- a/src/sass/layouts/_strategy.scss
+++ b/src/sass/layouts/_strategy.scss
@@ -53,6 +53,7 @@
 
     @include media('<=sm') {
       font-size: rem(28);
+      text-align: center;
     }
   }
 
@@ -64,6 +65,7 @@
     @include media('<=sm') {
       font-size: rem(20);
       margin-bottom: rem(80);
+      text-align: center;
     }
   }
 
